--- a/views/components/_landing.pug
+++ b/views/components/_landing.pug
@@ -2,10 +2,10 @@ section.landing
 
     //------carsoul button
     .landing--nxt-btn
-        svg
+        svg.landing--navigation-btn
             use(xlink:href="src/img/icons.svg#right")
     .landing--prev-btn
-        svg
+        svg.landing--navigation-btn
             use(xlink:href="src/img/icons.svg#right")
         
 
