added slert msg

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,6 @@
 @import "abstracts/variable.scss";
 @import "abstracts/mixins.scss";
+@import "abstracts/animation";
 
 @import "layout/_footer.scss";
 @import "layout/_header.scss";
