--- a/views/components/_sidebar.pug
+++ b/views/components/_sidebar.pug
@@ -5,27 +5,27 @@
             use(xlink:href="src/img/icon-pack-2.svg#cancel")
     .sidebar__list
 
-        a(href="#").sidebar__list--item
+        a(href="#").sidebar__list--item.primary__heading
             svg.sidebar__list--item-icon 
                 use(xlink:href="src/img/icon-pack-2.svg#home")  
             | Home
 
-        a(href="#").sidebar__list--item
+        a(href="#").sidebar__list--item.primary__heading
             svg.sidebar__list--item-icon
                 use(xlink:href="src/img/icon-pack-2.svg#medicine") 
             | Pharmacy
 
-        a(href="#").sidebar__list--item
+        a(href="#").sidebar__list--item.primary__heading
             svg.sidebar__list--item-icon
                 use(xlink:href="src/img/icon-pack-2.svg#caduceus-symbol") 
             | Hospitals
 
-        a(href="#").sidebar__list--item
+        a(href="#").sidebar__list--item.primary__heading
             svg.sidebar__list--item-icon 
                 use(xlink:href="src/img/icon-pack-2.svg#user") 
             | Profile
 
-        a(href="#").sidebar__list--item
+        a(href="#").sidebar__list--item.primary__heading
             svg.sidebar__list--item-icon 
                 use(xlink:href="src/img/icon-pack-2.svg#coronavirus") 
             | Corona virus
