--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,16 @@ ORDER: Base + typography > general layout + grid > page layout > components
 */
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600&family=Roboto:wght@100;300;400&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700&display=swap");
+@keyframes hideAlert {
+  0% {
+    transform: translateX(0%); }
+  50% {
+    transform: translateX(-50%); }
+  100% {
+    transform: translateX(-100%);
+    opacity: 0;
+    display: none; } }
+
 footer {
   padding: 1rem;
   width: 100%;
@@ -39,14 +49,14 @@ footer {
   grid-template-columns: repeat(3, 1fr);
   align-items: center;
   box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.8); }
-  @media (max-width: 980px) {
+  @media only screen and (max-width: 75em) {
     .navigation {
       grid-template-rows: repeat(2, 1fr);
       grid-template-columns: repeat(2, 1fr); } }
   .navigation__logo {
     color: #fff;
     font-size: 1.8rem; }
-    @media (max-width: 980px) {
+    @media only screen and (max-width: 75em) {
       .navigation__logo {
         grid-row: 1/2;
         grid-column: 1/2; } }
@@ -71,7 +81,7 @@ footer {
         display: block;
         margin: 0.7rem;
         width: 2.5rem; }
-    @media (max-width: 980px) {
+    @media only screen and (max-width: 75em) {
       .navigation__searchbar {
         grid-row: 2/3;
         grid-column: 1/3;
@@ -81,7 +91,7 @@ footer {
     justify-self: right;
     display: flex;
     align-items: center; }
-    @media (max-width: 980px) {
+    @media only screen and (max-width: 75em) {
       .navigation__link {
         grid-row: 1/2;
         grid-column: 2/3; } }
@@ -107,6 +117,51 @@ footer {
       cursor: pointer; }
     .navigation__link--item {
       cursor: pointer; }
+
+.alert__warning {
+  background-color: #fc3838;
+  color: #2a2a2a;
+  border-radius: 3px;
+  padding: 1rem;
+  text-align: center; }
+
+.alert__box {
+  transition: all .35s ease-in;
+  transform: translateY(-200px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 75%;
+  position: absolute;
+  top: 8rem;
+  right: 0;
+  left: 0;
+  margin-right: auto;
+  margin-left: auto; }
+  @media only screen and (max-width: 75em) {
+    .alert__box {
+      width: 95%;
+      top: 13rem; } }
+  .alert__box .warning {
+    width: 2.5rem;
+    height: 2.5rem;
+    margin-right: 2rem; }
+  .alert__box .error {
+    width: 2.5rem;
+    height: 2.5rem;
+    margin-right: 2rem;
+    fill: #f56e6e; }
+  .alert__box .success {
+    width: 2.5rem;
+    height: 2.5rem;
+    margin-right: 2rem;
+    fill: green; }
+
+.alert__box.showAlert {
+  transform: translateY(0px); }
+
+.alert__box.hideAlert {
+  transform: translateY(-1000px); }
 
 .landing {
   position: relative;
@@ -447,7 +502,6 @@ footer {
       margin: 1rem 0;
       display: block;
       text-decoration: none;
-      font-size: 1.8rem;
       transition: 0.3s;
       display: flex;
       justify-content: flex-start;
