--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,15 +7,12 @@
     left: 0;
     width: 100%;
     padding: $padding-sm;
-    // display: flex;
-    // justify-content: space-between;
-    // align-items: center;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
     box-shadow: 0px 0px 3px 1px rgba(0, 0, 0, 0.8);
 
-    @media (max-width: 980px) {
+    @include respond(tab-land) {
         grid-template-rows: repeat(2, 1fr);
         grid-template-columns: repeat(2, 1fr);
     }
@@ -24,7 +21,7 @@
         color: $color-light;
         font-size: 1.8rem;
 
-        @media (max-width: 980px) {
+        @include respond(tab-land) {
             grid-row: 1/2;
             grid-column: 1/2;
         }
@@ -58,7 +55,7 @@
             }
         }
 
-        @media (max-width: 980px) {
+        @include respond(tab-land) {
             grid-row: 2/3;
             grid-column: 1/3;
             width: 100%;
@@ -72,7 +69,7 @@
         display: flex;
         align-items: center;
 
-        @media (max-width: 980px) {
+        @include respond(tab-land) {
             grid-row: 1/2;
             grid-column: 2/3;
         }
@@ -102,9 +99,6 @@
             &-profile {
                 margin: 0 1.5rem;
 
-                @media (max-width: 980px) {
-                    // margin: 0 .5rem;
-                }
             }
 
             &-icon {
@@ -122,4 +116,67 @@
             cursor: pointer;
         }
     }
+}
+
+.alert {
+
+    // animation-name: hideAlert;
+    // animation-duration: 4s;
+    // animation-delay: -2s;
+
+    &__warning {
+        background-color: #fc3838;
+        color: $color-dark;
+        border-radius: 3px;
+        padding: $padding-sm;
+        text-align: center;
+    }
+
+    &__box {
+        transition: all .35s ease-in;
+        transform: translateY(-200px);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 75%;
+        position: absolute;
+        top: 8rem;
+        right: 0;
+        left: 0;
+        margin-right: auto;
+        margin-left: auto;
+
+        @include respond(tab-land) {
+            width: 95%;
+            top: 13rem;
+        }
+
+        .warning {
+            width: 2.5rem;
+            height: 2.5rem;
+            margin-right: 2rem;
+        }
+
+        .error {
+            width: 2.5rem;
+            height: 2.5rem;
+            margin-right: 2rem;
+            fill: rgb(245, 110, 110);
+        }
+
+        .success {
+            width: 2.5rem;
+            height: 2.5rem;
+            margin-right: 2rem;
+            fill: green;
+        }
+    }
+}
+
+.alert__box.showAlert {
+    transform: translateY(0px);
+}
+
+.alert__box.hideAlert {
+    transform: translateY(0-1000px);
 }
