--- a/views/components/_landing.pug
+++ b/views/components/_landing.pug
@@ -1,4 +1,4 @@
-section.landing
+section.landing.landing__slider
 
     //------carsoul button
     .landing--nxt-btn
@@ -8,8 +8,18 @@ section.landing
         svg.landing--navigation-btn
             use(xlink:href="src/img/icons.svg#right")
         
+    .landing__slider--item
+        img(src="src/img/carsoul1.jpg", alt="")
 
-    img(src="src/img/carsoul2.jpg", alt="")
+    .landing__slider--item
+        img(src="src/img/carsoul2.jpg", alt="")
+
+    .landing__slider--item
+        img(src="src/img/carsoul3.jpg", alt="")
+
+    .landing__slider--item
+        img(src="src/img/carsoul4.jpg", alt="")
+    
 
     h1 Meso Health care!!
     p Your health is now our responsibility.
