--- a/sass/components/_landing.scss
+++ b/sass/components/_landing.scss
@@ -1,7 +1,8 @@
 .landing {
     position: relative;
-    padding: $padding-m;
+    // padding: $padding-m;
     margin-bottom: 4rem;
+    margin-top: 1rem;
     height: 40rem;
     width: 100%;
 
@@ -15,18 +16,50 @@
         height: 22rem;
     }
 
-    & img {
-        z-index: -5;
-        height: 100%;
-        width: 100%;
-        object-fit: cover;
-        object-position: bottom;
-        border-radius: 3px;
+    &__slider {
+        max-width: 100%;
+        height: 38rem;
+        overflow: hidden;
 
-        @media (max-width: 980px) {
-            border-radius: 0;
+        &--item {
+            height: 100%;
+            width: 100%;
+            position: absolute;
+            top: 0;
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            transition: transform 1s;
+
+            & img {
+                z-index: -5;
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+                object-position: bottom;
+                border-radius: 3px;
+
+                @media (max-width: 980px) {
+                    border-radius: 0;
+                }
+            }
         }
     }
+
+    // & img {
+    //     z-index: -5;
+    //     height: 100%;
+    //     width: 100%;
+    //     object-fit: cover;
+    //     object-position: bottom;
+    //     border-radius: 3px;
+
+    //     @media (max-width: 980px) {
+    //         border-radius: 0;
+    //     }
+    // }
 
     &--navigation-btn {
         width: 3.5rem;
@@ -43,6 +76,8 @@
     }
 
     &--nxt-btn {
+        z-index: 12;
+
         position: absolute;
         top: 42%;
         right: 3rem;
@@ -58,6 +93,8 @@
     }
 
     &--prev-btn {
+        z-index: 12;
+
         position: absolute;
         top: 42%;
         left: 3rem;
