--- a/views/home.pug
+++ b/views/home.pug
@@ -5,6 +5,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="stylesheet", href="css/style.css")
         script(defer src="src/js/index.js")
+        script(defer src="src/js/landing_slider.js")
         script(defer src="src/js/alert.js")
 
         title Meso| All you need is here.
