--- a/views/components/_landing.pug
+++ b/views/components/_landing.pug
@@ -9,16 +9,16 @@ section.landing.landing__slider
             use(xlink:href="src/img/icons.svg#right")
         
     .landing__slider--item
-        img(src="src/img/carsoul1.jpg", alt="")
+        img(src="src/img/carsoul1.jpg", alt="carsoul1")
 
     .landing__slider--item
-        img(src="src/img/carsoul2.jpg", alt="")
+        img(src="src/img/carsoul2.jpg", alt="carsoul1")
 
     .landing__slider--item
-        img(src="src/img/carsoul3.jpg", alt="")
+        img(src="src/img/carsoul3.jpg", alt="carsoul1")
 
     .landing__slider--item
-        img(src="src/img/carsoul4.jpg", alt="")
+        img(src="src/img/carsoul4.jpg", alt="carsoul1")
     
 
     h1 Meso Health care!!
