--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,5 +5,5 @@ footer {
     text-align: center;
     background-color: $color-dark;
     color: $color-light;
-    margin-top: 5rem;
+    // margin-top: 5rem;
 }
