--- a/views/components/_header.pug
+++ b/views/components/_header.pug
@@ -1,36 +1,41 @@
-//- header.navigation
-//-     .navigation__logo Meso
-//-     .navigation__searchbar
-//-         input(type="text", placeholder="search").navigation__searchbar--input
-//-         a(href="#").navigation__searchbar--input-link
-//-             img(src="src/img/search.svg", alt="search icon").navigation__searchbar--input-link-btn
-//-     .navigation__link
-//-         a(href="#").navigation__link--btn.navigation__link--btn-active Login
-//-         a(href="#").navigation__link--btn Signup
-//-         .navigation__link--item
-//-             span
-//-             span
-//-             span
-//- h1 break
 header.navigation
     .navigation__logo Meso
-
     form.navigation__searchbar
         input(type="text", placeholder="search", name="searchQuery").navigation__searchbar--input
         button(type="submit").navigation__searchbar--input-link
             svg.navigation__searchbar--input-link-btn
                 use(xlink:href="src/img/icon-pack-2.svg#search")
-      
     .navigation__link
-        a(href="#")
-            svg.navigation__link--user-profile.navigation__link--user-icon
-                use(xlink:href="src/img/icon-pack-2.svg#user")
-        a(href="#")
-            svg.navigation__link--user-notification.navigation__link--user-icon
-                use(xlink:href="src/img/icon-pack-2.svg#notification")
+        a(href="/login").navigation__link--btn.navigation__link--btn-active Login
+        a(href="#").navigation__link--btn Signup
         a(href="#")
             svg.navigation__link--item.navigation__link--user-icon
                 use(xlink:href="src/img/icon-pack-2.svg#menu-3")
+
+
+//- h1 break
+
+
+
+//- header.navigation
+//-     .navigation__logo Meso
+
+//-     form.navigation__searchbar
+//-         input(type="text", placeholder="search", name="searchQuery").navigation__searchbar--input
+//-         button(type="submit").navigation__searchbar--input-link
+//-             svg.navigation__searchbar--input-link-btn
+//-                 use(xlink:href="src/img/icon-pack-2.svg#search")
+      
+//-     .navigation__link
+//-         a(href="#")
+//-             svg.navigation__link--user-profile.navigation__link--user-icon
+//-                 use(xlink:href="src/img/icon-pack-2.svg#user")
+//-         a(href="#")
+//-             svg.navigation__link--user-notification.navigation__link--user-icon
+//-                 use(xlink:href="src/img/icon-pack-2.svg#notification")
+//-         a(href="#")
+//-             svg.navigation__link--item.navigation__link--user-icon
+//-                 use(xlink:href="src/img/icon-pack-2.svg#menu-3")
         
     //- .alert__box.alert__error
     //-     svg
