--- a/views/components/_sidebar.pug
+++ b/views/components/_sidebar.pug
@@ -29,6 +29,16 @@
             svg.sidebar__list--item-icon 
                 use(xlink:href="src/img/icon-pack-2.svg#coronavirus") 
             | Corona virus
+
+    .sidebar__account
+        a(href="/login").primary__heading
+            svg.sidebar__account--btn
+                use(xlink:href="src/img/icon-pack-2.svg#log-in")
+            | Login
+        a(href="#").primary__heading
+            svg.sidebar__account--btn
+                use(xlink:href="src/img/icon-pack-2.svg#add-user")
+            | Signup
     .sidebar__about
         p version 1.0
             
