--- a/sass/abstracts/_variable.scss
+++ b/sass/abstracts/_variable.scss
@@ -1,5 +1,6 @@
 $color-primary: #108eea;
 $color-primary-light: #92c3ff;
+$color-primary-light-2: #b3daf6;
 $color-primary-dark: rgb(6, 66, 177);
 $color-primary-night: #00213a;
 
