--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -66,12 +66,14 @@
             align-items: center;
 
             &-icon {
-                background: #d3d2d2;
                 padding: 1rem;
-                border-radius: 50%;
                 margin-right: 2rem;
                 width: 4.5rem;
                 height: 4.5rem;
+            }
+
+            &:hover {
+                background-color: #d8d8d8;
             }
 
         }
@@ -88,6 +90,28 @@
             right: 0;
             margin-left: auto;
             margin-right: auto;
+        }
+    }
+
+    &__account {
+
+        & a {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            padding: 1rem;
+            text-decoration: none;
+            background: #064b7d;
+            color: white;
+            margin: 1rem;
+            border-radius: 3px;
+
+            & svg {
+                width: 2.5rem;
+                height: 2.5rem;
+                margin-right: 2rem;
+                fill: currentColor;
+            }
         }
     }
 
