--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import "components/sidebar";
 @import "components/features";
 @import "components/review-card";
+@import "components/account-card";
 
 @import "typography/typography";
 @import "base/base.scss";
