--- a/views/components/_sidebar.pug
+++ b/views/components/_sidebar.pug
@@ -5,7 +5,7 @@
             use(xlink:href="src/img/icon-pack-2.svg#cancel")
     .sidebar__list
 
-        a(href="#").sidebar__list--item.primary__heading
+        a(href="/").sidebar__list--item.primary__heading
             svg.sidebar__list--item-icon 
                 use(xlink:href="src/img/icon-pack-2.svg#home")  
             | Home
