--- a/sass/components/_account-card.scss
+++ b/sass/components/_account-card.scss
@@ -67,7 +67,7 @@
         color: white;
         width: 15rem;
         height: 5rem;
-        background-color: black;
+        background-color: #7d3111;
         font-size: 1.7rem;
         text-decoration: none;
         margin: 1rem 0;
