--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,6 +55,9 @@ footer {
   .navigation__logo {
     color: #fff;
     font-size: 1.8rem; }
+    .navigation__logo svg {
+      width: 7rem;
+      height: 3rem; }
     @media only screen and (max-width: 75em) {
       .navigation__logo {
         grid-row: 1/2;
@@ -220,7 +223,7 @@ footer {
         width: 3rem;
         height: 3rem; } }
   .landing--nxt-btn {
-    z-index: 12;
+    z-index: 19;
     position: absolute;
     top: 42%;
     right: 3rem;
@@ -232,7 +235,7 @@ footer {
       .landing--nxt-btn {
         right: 1rem; } }
   .landing--prev-btn {
-    z-index: 12;
+    z-index: 9;
     position: absolute;
     top: 42%;
     left: 3rem;
@@ -738,7 +741,8 @@ footer {
     width: 95%; }
     @media only screen and (max-width: 37.5em) {
       .account__form input {
-        font-size: 1.4rem; } }
+        font-size: 1.4rem;
+        width: 100%; } }
   .account__form button {
     color: #fff;
     width: 30rem;
@@ -754,7 +758,7 @@ footer {
     @media only screen and (max-width: 37.5em) {
       .account__form button {
         font-size: 1.9rem;
-        width: 85%; } }
+        width: 100%; } }
   .account__form-head {
     font-size: 3rem;
     font-weight: 400;
