--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,7 +57,8 @@ footer {
     font-size: 1.8rem; }
     .navigation__logo svg {
       width: 7rem;
-      height: 3rem; }
+      height: 3rem;
+      margin-top: 0.9rem; }
     @media only screen and (max-width: 75em) {
       .navigation__logo {
         grid-row: 1/2;
